fix bug: create new window close all, sometimes;new: unlock without enter

--- a/html/options.html
+++ b/html/options.html
@@ -14,6 +14,7 @@
         <img id="main-logo" src="../img/logo.png">
         <div id="passwd-title"></div>
         <notif></notif>
+        <div id="user-first" class="user-first"></div>
         <passwd>
             <input id="passwd-last" autofocus="autofocus" placeholder="" style="display:none;">
             <input id="passwd-new" type="text" name="" placeholder="">
